# Complaint-Triage

./: .env.example  .gitattributes  .gitignore  AGENTS.md  BACKLOG.md  README.md  SPEC.md  WORKFLOW.md  compose.yaml  pyproject.toml  requirements-transformer-tokenizer.txt  requirements-transformer-training.txt
.github/ISSUE_TEMPLATE/: implementation.yml
.github/workflows/: ci.yml
contracts/: cfpb-baseline-error-analysis.schema.json  cfpb-extraction-run-manifest.schema.json  cfpb-majority-baseline-report.schema.json  cfpb-raw-batch-manifest.schema.json  cfpb-temporal-split-manifest.schema.json  cfpb-tfidf-logreg-report.schema.json  cfpb-transformer-dataset.schema.json  cfpb-transformer-token-profile.schema.json  cfpb-transformer-training.schema.json  cfpb-validation-model-comparison.schema.json
docs/: analytical_population.md  architecture.md  baseline_error_analysis.md  cfpb_bounded_profile_plan.md  cfpb_profile_command.md  cfpb_raw_batch_manifest.md  cfpb_source_inventory.md  cfpb_taxonomy_stability.md  ct110_live_run.md  learning_log.md  majority_baseline.md  phase_0_review.md  postgresql_local.md  problem_statement.md  raw_ingestion.md  real_extraction.md  real_extraction_plan.md  staging_transformations.md  temporal_split.md  tfidf_logreg.md  transformer_dataset.md  transformer_token_profile.md  transformer_training.md  validation_model_comparison.md
docs/decisions/: 0001-separate-backend-and-frontend.md  0002-standard-python-environment.md  0003-content-addressed-raw-batches.md  0004-local-postgresql-compose.md  0005-append-only-raw-ingestion.md  (+8 more)
migrations/: env.py
src/complaint_triage/: cli.py  (+21 more)
tests/: conftest.py  test_analytical_population.py  test_analytical_population_postgres.py  test_baseline_error_analysis.py  test_batch_manifest_contract.py  test_cfpb_fixture.py  test_cfpb_profile.py  test_cli.py  test_db.py  test_live_extraction.py  test_majority_baseline.py  test_postgres_compose_contract.py  test_raw_ingestion.py  test_raw_ingestion_postgres.py  test_real_extraction.py  test_real_run_report.py  test_smoke.py  test_staging.py  test_staging_postgres.py  test_taxonomy_profile.py  test_temporal_split.py  test_temporal_split_postgres.py  test_tfidf_logreg.py  test_transformer_dataset.py  test_transformer_fit.py  test_transformer_token_profile.py  test_transformer_training.py  test_validation_comparison.py
(+34 files in other folders)
